--- a/src/snippets/content-header.liquid
+++ b/src/snippets/content-header.liquid
@@ -47,6 +47,8 @@
       link_text: link_text,
       link_url: link_url,
       link_style: link_style,
+      link_size: link_size,
+      link_block: link_block,
       content_align: content_align,
       content_align_lg: content_align_lg %}
   {% endcapture %}
