Section header masthead image

--- a/src/sections/header.liquid
+++ b/src/sections/header.liquid
@@ -7,7 +7,7 @@
 {% endcomment %}
 
 <nav class="navbar navbar-expand-lg navbar-light bg-white fixed-top border-bottom">
-  <a class="navbar-brand" href="/">King of Cards</a>
+  <a class="navbar-brand" href="/">King Cards</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -16,6 +16,9 @@
     <ul class="navbar-nav mr-auto">
       <li class="nav-item">
         <a class="nav-link" href="/products/king">King</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/products/bicycle-8-gram-clay-poker-chip-set">Chips</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="/collections/1885">1885 Collection</a>
