--- a/src/snippets/bg-image-tag.liquid
+++ b/src/snippets/bg-image-tag.liquid
@@ -81,6 +81,7 @@
         .bg-image-{{ id }} {
           background-image: url({{ bg_image_url }});
           background-size: cover;
+          background-position: center;
         }
       </style>
       <style>
@@ -88,6 +89,7 @@
           .bg-image-{{ id }} {
             background-image: url({{ bg_image_url_lg }});
             background-size: cover;
+            background-position: center;
           }
         }
       </style>
