--- a/src/snippets/product-form.liquid
+++ b/src/snippets/product-form.liquid
@@ -79,7 +79,7 @@
     </p>
     <button
       type="submit"
-      class="btn btn-success btn-block"
+      class="btn btn-danger btn-block"
       name="add"
       data-add-to-cart
       {% unless current_variant.available %}disabled="disabled"{% endunless %}>
