--- a/src/snippets/embed-object.liquid
+++ b/src/snippets/embed-object.liquid
@@ -49,7 +49,7 @@
 
 {% if align_items != blank %}
   {% assign embed_responsive_item_classes = embed_responsive_item_classes
-    | append: ' '
+    | append: ' align-items-'
     | append: align_items %}
 {% else %}
   {% assign embed_responsive_item_classes = embed_responsive_item_classes
@@ -59,7 +59,7 @@
 
 {% if align_items_lg != blank %}
   {% assign embed_responsive_item_classes = embed_responsive_item_classes
-    | append: ' '
+    | append: ' align-items-md-'
     | append: align_items_lg %}
 {% endif %}
 
